added bioinformatics profiles

--- a/_includes/side-nav_js.html
+++ b/_includes/side-nav_js.html
@@ -105,7 +105,10 @@
                     <li {% if page.url=="/courses/other-courses/" %} class="sub_color" {% endif %}><a
                             href="{{ site.url }}/courses/other-courses/">Other pathogen surveillance courses </a></li>
                 </ul>
-
+                <ul class="courselist indent_sub_list">
+                    <li {% if page.url=="/courses/bioinformatics-profiles/" %} class="sub_color" {% endif %}><a
+                            href="{{ site.url }}/courses/bioinformatics-profiles">Bioinformatics Profiles </a></li>
+                </ul>
             </li>
             <li id="01resource" {% if page.url=="/resources/" %}class="sub_color" {% endif %}> <a
                     href="{{ site.url }}resources/">Tools & Resources
