--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -228,8 +228,9 @@
         {% include subpage-header.html %}
 
     </div>
-    <div class="container">
 
+
+    <div class="container">
         <div class="row">
             <p></p>
             <div class="container">
@@ -249,6 +250,10 @@
 
 
                 <div class="col-lg-10 col-md-10 col-sm-10 main_container_section" class="my-auto">
+                    <div class="">
+                        {% include subpage-intro.html %}
+                        <hr>
+                    </div>
                     {{content}}
                 </div>
 
