--- a/_includes/subpage-intro.html
+++ b/_includes/subpage-intro.html
@@ -1,3 +1,3 @@
 <section>
-    The<a href="https://ipg.africacdc.org/" target="_blank"> Africa CDC Pathogen Genomics Initiative</a> NGS Academy aims to develop and deliver a comprehensive training framework for the implementation of next generation sequencing (NGS) for pathogen surveillance. This includes all aspects of NGS, from sample collection to sequencing and analysis to inform public health interventions.
+    The NGS Academy forms part of the <a href="https://ipg.africacdc.org/" target="_blank"> Africa CDC Pathogen Genomics Initiative</a> (PGI). This initiative is funded by the Bill & Melinda Gates Foundation. Our training initiatives are carried out in partnership with the African Society for Laboratory Medicine (ASLM).
 </section>
