--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -240,6 +240,10 @@
 
 
                 <div class="col-lg-10 col-md-10 col-sm-10 main_container_section" class="my-auto">
+                    <div class="">
+                        {% include subpage-intro.html %}
+                <hr>
+                    </div>
                     {{content}}
                 </div>
 
