--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -166,7 +166,7 @@
                                                 Surveillance Courses</a>
                                         </li>
                                         <li><a class="dropdown-item" href="{{ site.url }}courses/bioinformatics-profiles4/">
-                                            Bioinformatics Profiles</a>
+                                            Pathogen Surveillance Training Curricula</a>
                                     </li>
 
                                         <!-- <li><a class="dropdown-item" href="#"> Submenu item 2 </a></li>
