--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -196,7 +196,9 @@
 
                                 </li>
 
-
+                                <li {% if page.url=="/gallery/" %}class="active" {% endif %}><a
+                                    href="{{ site.url }}gallery">Gallery</a>
+                            </li>
 
                                 <li {% if page.url=="/contact/" %}class="active" {% endif %}><a
                                         href="{{ site.url }}contact">Contact</a>
