added ticketing page

--- a/_includes/side-nav_js.html
+++ b/_includes/side-nav_js.html
@@ -117,6 +117,8 @@
                     <span class="sub-arrow"></span></a>
                 <ul class="resourcelist indent_sub_list">
                     <li {% if page.url=="/resources/publications/" %} class="sub_color" {% endif %}><a
+                        href="/resources/help-desk/">Help-Desk</a></li>
+                    <li {% if page.url=="/resources/publications/" %} class="sub_color" {% endif %}><a
                         href="/resources/training-materials/">Training materials</a></li>
                     <li {% if page.url=="/resources/publications/" %} class="sub_color" {% endif %}><a
                         href="/resources/pha4ge/">PHA4GE </a></li>
