--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -181,9 +181,13 @@
                                     %}><a class="nav-link  dropdown-toggle" href="{{ site.url }}resources"
                                         data-bs-toggle="dropdown-1"> Tools & Resources</a>
                                     <ul class="dropdown-menu">
+                                        <li><a class="dropdown-item" href="{{ site.url }}resources/help-desk/">
+                                            Help-Desk / Ticketing Sys</a>
+                                    </li>
                                         <li><a class="dropdown-item" href="{{ site.url }}resources/training-materials/">
                                             Training Materials</a>
                                     </li>
+
                                         <li><a class="dropdown-item" href="{{ site.url }}resources/pha4ge/">
                                             PHA4GE</a>
                                     </li>
@@ -195,10 +199,6 @@
                                     </ul>
 
                                 </li>
-
-                                <li {% if page.url=="/gallery/" %}class="active" {% endif %}><a
-                                    href="{{ site.url }}gallery">Gallery</a>
-                            </li>
 
                                 <li {% if page.url=="/contact/" %}class="active" {% endif %}><a
                                         href="{{ site.url }}contact">Contact</a>
