added ticketing page

--- a/_includes/side-nav_js.html
+++ b/_includes/side-nav_js.html
@@ -114,6 +114,8 @@
                     href="{{ site.url }}resources/">Tools & Resources
                     <span class="sub-arrow"></span></a>
                 <ul class="resourcelist indent_sub_list">
+                    <li {% if page.url=="/resources/help-desk/" %} class="sub_color" {% endif %}><a
+                        href="{{ site.url }}resources/help-desk/">Help-Desk</a></li>
                     <li {% if page.url=="/resources/training-materials/" %} class="sub_color" {% endif %}><a
                         href="{{ site.url }}resources/training-materials/">Training materials</a></li>
                         <li {% if page.url=="/resources/pha4ge/" %} class="sub_color" {% endif %}><a
