--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -192,6 +192,9 @@
                                     %}><a class="nav-link  dropdown-toggle" href="{{ site.url }}resources"
                                         data-bs-toggle="dropdown-1"> Tools & Resources</a>
                                     <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="{{ site.url }}resources/help-desk/">
+                                            Help-Desk/Ticketing Sys</a>
+                                    </li>
                                         <li><a class="dropdown-item" href="{{ site.url }}resources/training-materials/">
                                             Training Materials</a>
                                     </li>
