page layout update

--- a/_includes/side-nav_js.html
+++ b/_includes/side-nav_js.html
@@ -110,6 +110,11 @@
                     <li {% if page.url=="/courses/other-courses/" %} class="sub_color" {% endif %}><a
                             href="/courses/other-courses/"> Other pathogen surveillance courses </a></li>
                 </ul>
+                <ul class="courselist indent_sub_list">
+                    <li {% if page.url=="/courses/curricula/" %} class="sub_color" {% endif %}><a
+                            href="/courses/curricula/">Pathogen Surveillance Training Curricula </a></li>
+                </ul>
+
 
             </li>
             <li id="01resource" {% if page.url=="/resources/" %}class="sub_color" {% endif %}> <a
