--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -176,8 +176,8 @@
                                                 Pathogen
                                                 Surveillance Courses</a>
                                         </li>
-                                        <li><a class="dropdown-item" href="{{ site.url }}courses/bioinformatics-profiles">
-                                        Bioinformatics Profiles</a>
+                                        <li><a class="dropdown-item" href="{{ site.url }}courses/curricula/">
+                                            Pathogen Surveillance Training Curricula</a>
                                     </li>
 
                                         <!-- <li><a class="dropdown-item" href="#"> Submenu item 2 </a></li>
