--- a/_includes/side-nav_js.html
+++ b/_includes/side-nav_js.html
@@ -107,7 +107,7 @@
                 </ul>
                 <ul class="courselist indent_sub_list">
                     <li {% if page.url=="/courses/bioinformatics-profiles/" %} class="sub_color" {% endif %}><a
-                            href="{{ site.url }}/courses/bioinformatics-profiles">Bioinformatics Profiles </a></li>
+                            href="{{ site.url }}/courses/curricula/">Pathogen Surveillance Training Curricula</a></li>
                 </ul>
             </li>
             <li id="01resource" {% if page.url=="/resources/" %}class="sub_color" {% endif %}> <a
