--- a/_includes/subpage-header.html
+++ b/_includes/subpage-header.html
@@ -1,5 +1,5 @@
-<section id="global-header">
-    <div class="container">
+<section id="global-header-1">
+    <div class="container gradient-div">
         <div class="row">
             <div class="col-md-12">
                 <div class="block">
@@ -7,6 +7,10 @@
 
                 </div>
             </div>
+      
         </div>
+
+
+     
     </div>
 </section>
