--- a/css/style.css
+++ b/css/style.css
@@ -418,8 +418,15 @@ font header .navbar-default .navbar-nav li a:hover {
 /*--
 	Slider-work Start 
 --*/
-#global-header {
-  background: url("../img/slider-bg2.jpg") no-repeat;
+.gradient-div {
+  width: 100%;
+  height: 112px; /* Adjust the height as needed */
+  background-image: linear-gradient(to bottom,rgb(140, 33, 51)  90%, rgb(52, 143, 65) 5%);
+  /* Color stops are at 0%, 33%, 66%, and 100% */
+}
+
+#global-header-1 {
+  /* background: url("../img/slider-bg2.jpg") no-repeat; */
   background-size: cover;
   padding-top: 37.5px;
   padding-bottom: 18.5px;
@@ -428,7 +435,7 @@ font header .navbar-default .navbar-nav li a:hover {
 
 }
 
-#global-header:before {
+#global-header-1:before {
   content: "";
   position: absolute;
   left: 0;
@@ -437,11 +444,11 @@ font header .navbar-default .navbar-nav li a:hover {
   right: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(to left, #8c2133, #1f1c2c 100%);
-  opacity: 0.8;
+  /* background: linear-gradient(to left, #8c2133, #1f1c2c 100%);
+  opacity: 0.8; */
 }
 
-#global-header .block {
+#global-header-1 .block {
   color: white;
   margin: 0 auto;
   padding-left: 0px;
@@ -449,17 +456,17 @@ font header .navbar-default .navbar-nav li a:hover {
   text-align: center;
 }
 
-#global-header .block h1 {
+#global-header-1 .block h1 {
   font-weight: 300;
   font-size: 28px;
   /* letter-spacing: 4px; */
   padding-bottom: 15px;
-  margin-top: 0;
+  margin-top: 40px;
   text-transform: capitalize;
 
 }
 
-#global-header .block p {
+#global-header-1 .block p {
   font-size: 16px;
   font-weight: 300;
   letter-spacing: 1px;
@@ -1154,7 +1161,9 @@ div {
   border-radius: 4px;
   padding: 10px;
 
+
 }
+
 
 /* table sorting css*/
 
@@ -1169,7 +1178,6 @@ div {
 
 .table-sortable .th-sort-desc::after {
   content: "\25be";
-
 }
 
 .table-sortable .th-sort-asc::after,
@@ -1182,28 +1190,6 @@ div {
   background: rgba(0, 0, 0, 0.1);
 }
 
-.button_background_color {
-
-  background-color: #8c2133 !important;
-}
-
-
-.modal {
-  text-align: center;
-}
-
-.modal:before {
-  display: inline-block;
-  vertical-align: middle;
-  content: " ";
-  height: 100%;
-}
-
-.modal-dialog {
-  display: inline-block;
-  text-align: left;
-  vertical-align: middle;
-}
 
 
 .btn-danger:hover,
@@ -1231,20 +1217,18 @@ div {
   border-color: #8c2133 !important;
 }
 
-/* 
-calendar colors  */
 
 .fc-h-event {
   border: 1px solid var(--fc-event-border-color, #8c2133) !important;
   background-color: var(--fc-event-bg-color, #8c2133) !important;
 }
 
+
+
 .main_container_section {
 
   min-height: 50vh;
 }
-
-
 
 /* 
 css underline on hoover */
@@ -1277,9 +1261,3 @@ a:hover::before {
 
 /* 
 css underline on hoover */
-
-
-
-.trial{
-  background-color: pink !important;
-}
