--- a/css/style.css
+++ b/css/style.css
@@ -418,8 +418,15 @@ font header .navbar-default .navbar-nav li a:hover {
 /*--
 	Slider-work Start 
 --*/
-#global-header {
-  background: url("../img/slider-bg2.jpg") no-repeat;
+.gradient-div {
+  width: 100%;
+  height: 112px; /* Adjust the height as needed */
+  background-image: linear-gradient(to bottom,rgb(140, 33, 51)  90%, rgb(52, 143, 65) 5%);
+  /* Color stops are at 0%, 33%, 66%, and 100% */
+}
+
+#global-header-1 {
+  /* background: url("../img/slider-bg2.jpg") no-repeat; */
   background-size: cover;
   padding-top: 37.5px;
   padding-bottom: 18.5px;
@@ -428,7 +435,7 @@ font header .navbar-default .navbar-nav li a:hover {
 
 }
 
-#global-header:before {
+#global-header-1:before {
   content: "";
   position: absolute;
   left: 0;
@@ -437,11 +444,11 @@ font header .navbar-default .navbar-nav li a:hover {
   right: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(to left, #8c2133, #1f1c2c 100%);
-  opacity: 0.8;
+  /* background: linear-gradient(to left, #8c2133, #1f1c2c 100%);
+  opacity: 0.8; */
 }
 
-#global-header .block {
+#global-header-1 .block {
   color: white;
   margin: 0 auto;
   padding-left: 0px;
@@ -449,17 +456,17 @@ font header .navbar-default .navbar-nav li a:hover {
   text-align: center;
 }
 
-#global-header .block h1 {
+#global-header-1 .block h1 {
   font-weight: 300;
   font-size: 28px;
   /* letter-spacing: 4px; */
   padding-bottom: 15px;
-  margin-top: 0;
+  margin-top: 40px;
   text-transform: capitalize;
 
 }
 
-#global-header .block p {
+#global-header-1 .block p {
   font-size: 16px;
   font-weight: 300;
   letter-spacing: 1px;
