added collaspsible and css for trainer communities

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -210,6 +210,10 @@
 
                                 </li>
 
+                                <li {% if page.url=="/trainer-communities/" %}class="active" {% endif %}><a
+                                    href="{{ site.url }}trainer-communities">Trainer Communities</a>
+                            </li>
+
 
 
                                 <li {% if page.url=="/contact/" %}class="active" {% endif %}><a
