--- a/css/style.css
+++ b/css/style.css
@@ -1270,3 +1270,12 @@ trainer communities css */
   border-radius: 12px;
   min-height: 28vh;
 }
+
+/* Responsive adjustments */
+@media screen and (max-width: 552px) {
+  .day_content {
+   font-size: 10px;
+   padding: 1px;
+
+ }
+}
