--- a/_includes/side-nav_js.html
+++ b/_includes/side-nav_js.html
@@ -131,6 +131,8 @@
                             href="/resources/publications/"> Publications </a></li>
                 </ul>
             </li>
+            <li {% if page.url=="/trainer-communities/" %}class="sub_color" {% endif %}><a href="trainer-communities/">Trainer Communities</a>
+            </li>
             <li {% if page.url=="/contact/" %}class="sub_color" {% endif %}><a href="/contact/">Contact</a>
             </li>
         </ul>
