added trainer communites

--- a/_includes/side-nav_js.html
+++ b/_includes/side-nav_js.html
@@ -124,6 +124,8 @@
                             href="{{ site.url }}resources/publications/">Publications </a></li>
                 </ul>
             </li>
+            <li {% if page.url=="/trainer-communities/" %}class="sub_color" {% endif %}><a href="{{ site.url }}trainer-communities/">Trainer Communities</a>
+            </li>
             <li {% if page.url=="/contact/" %}class="sub_color" {% endif %}><a href="{{ site.url }}contact/">Contact</a>
             </li>
         </ul>
