added test collaboration page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -209,11 +209,26 @@
                                     </ul>
 
                                 </li>
-
-                                <li {% if page.url=="/trainer-communities/" %}class="active" {% endif %}><a
+                                <!-- old menu for trainer community and collaborators -->
+                                <!-- <li {% if page.url=="/trainer-communities/" %}class="active" {% endif %}><a
                                     href="{{ site.url }}trainer-communities">Trainer Communities</a>
+                            </li> -->
+
+                            <!-- New menu for trainer community and collaborators -->
+
+                            <li class="nav-item dropdown" {% if page.url=="/trainer-communities/" %}class="active" {% endif
+                                %}><a class="nav-link  dropdown-toggle" href="{{ site.url }}trainer-communities"
+                                    data-bs-toggle="dropdown-1"> Trainer Communities</a>
+                                <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="{{ site.url }}Collaboration/">
+                                        Collaborative Research/Collaborations</a>
+                            
+                                
+                                </ul>
+
                             </li>
 
+                            <!-- new menu for trainer community and collaborators -->
 
 
                                 <li {% if page.url=="/contact/" %}class="active" {% endif %}><a
