added related projects

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -218,10 +218,10 @@
 
                             <li class="nav-item dropdown" {% if page.url=="/trainer-communities/" %}class="active" {% endif
                                 %}><a class="nav-link  dropdown-toggle" href="{{ site.url }}trainer-communities"
-                                    data-bs-toggle="dropdown-1"> Trainer Communities</a>
+                                    data-bs-toggle="dropdown-1">Trainer Communities</a>
                                 <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="{{ site.url }}Collaboration/">
-                                        Collaborative Research/Collaborations</a>
+                                <li><a class="dropdown-item" href="{{ site.url }}related-projects/">
+                                        Related Projects</a>
                             
                                 
                                 </ul>
