--- a/_includes/side-nav_js.html
+++ b/_includes/side-nav_js.html
@@ -124,8 +124,17 @@
                             href="{{ site.url }}resources/publications/">Publications </a></li>
                 </ul>
             </li>
-            <li {% if page.url=="/trainer-communities/" %}class="sub_color" {% endif %}><a href="{{ site.url }}trainer-communities/">Trainer Communities</a>
-            </li>
+
+            <li id="01resource" {% if page.url=="/trainer-communities/" %}class="sub_color" {% endif %}> <a
+                href="{{ site.url }}trainer-communities/">Trainer Communities
+                <span class="sub-arrow"></span></a>
+            <ul class="resourcelist indent_sub_list">
+                <li {% if page.url=="/related-projects/" %} class="sub_color" {% endif %}><a
+                    href="{{ site.url }}related-projects/">Related Projects</a></li>
+
+            </ul>
+        </li>
+
             <li {% if page.url=="/contact/" %}class="sub_color" {% endif %}><a href="{{ site.url }}contact/">Contact</a>
             </li>
         </ul>
