--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/responsive.css">
 
-
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
 
     <link rel="stylesheet" type="text/css" href="css/bootstrap-sidermenu.css" />
     <!-- came with side bar -->
