--- a/css/style.css
+++ b/css/style.css
@@ -1242,20 +1242,20 @@ a:hover {
   color: #8c2133;
 }
 
-a::before {
+a::after {
   content: "";
   position: absolute;
   display: block;
   width: 100%;
   height: 2px;
-  bottom: 0;
-  /* left: 0; */
-  background-color:#8c2133;
+  bottom: -2px;
+  left: 0;
+  background-color: #8c2133;
   transform: scaleX(0);
   transition: transform 0.3s ease;
 }
 
-a:hover::before {
+a:hover::after {
   transform: scaleX(1);
 }
 
