added Africa CDC to the sub-page header

--- a/_includes/subpage-intro.html
+++ b/_includes/subpage-intro.html
@@ -1,3 +1,3 @@
 <section>
-    The NGS Academy forms part of the <a href="https://africacdc.org/institutes/ipg/" target="_blank"> Africa CDC Pathogen Genomics Initiative</a> (PGI). This initiative is funded by the Bill & Melinda Gates Foundation. Our training initiatives are carried out in partnership with the <a href="https://aslm.org/" target="_blank">African Society for Laboratory Medicine</a> (ASLM).
+    The NGS Academy forms part of the <a href="https://africacdc.org/institutes/ipg/" target="_blank"> Africa CDC Pathogen Genomics Initiative</a> (PGI). This initiative is funded by the Bill & Melinda Gates Foundation. Our training initiatives are carried out in partnership with the <a href="https://aslm.org/" target="_blank">African Society for Laboratory Medicine</a> (ASLM) and the <a href="https://africacdc.org/" target="_blank"> Africa CDC</a>
 </section>
