--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -273,8 +273,8 @@ pwd
 
                 <div class="col-lg-10 col-md-10 col-sm-10 main_container_section" class="my-auto">
                     <div class="">
-                        {% include subpage-intro.html %}
-                        <hr>
+                        <!-- {% include subpage-intro.html %} -->
+                        <!-- <hr> -->
                     </div>
                     {{content}}
                 </div>
