--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -156,7 +156,7 @@
                                         </li>
                                         <li><a class="dropdown-item" href="{{ site.url }}courses/upcoming-courses/">
                                                 Upcoming
-                                                Courses</a>
+                                                Courses & Events</a>
                                         </li>
 
                                         <!-- <li><a class="dropdown-item"
